--- a/package.json
+++ b/package.json
@@ -1,11 +1,16 @@
 {
   "name": "youtube-backend",
   "version": "1.0.0",
-  "description": "\"A practice project in learning backend\"",
+  "description": "A practice project in learning backend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon src/index.js"
   },
   "author": "Tarun Jain",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "nodemon": "^3.1.4"
+  }
 }
